fix: modal shadows and scrollbar

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -603,8 +603,8 @@
   right: 0;
   bottom: 0;
   z-index: 5;
-  //display: flex;
-  display: none;
+  display: flex;
+  //display: none;
   align-items: center;
   justify-content: center;
   background: linear-gradient(180deg, rgba(235, 62, 46, 0.28) 0%, rgba(40, 15, 12, 0) 100%);
@@ -623,25 +623,25 @@
     &::-webkit-scrollbar {
       width: 0;
     }
-    .modal-dialog__red-shadow {
-      height: 50%;
-      width: 50%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background: radial-gradient(50% 50% at 0% 50%, #EB402F 0%, rgba(235, 64, 47, 0) 100%);
-      opacity: 0.4;
-    }
-    .modal-dialog__white-shadow {
-      height: 50%;
-      width: 50%;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      background: radial-gradient(50% 50% at 0% 50%, #F2F2F2 0%, rgba(242, 242, 242, 0) 100%);
-      opacity: 0.2;
-      transform: matrix(-1, 0, 0, 1, 0, 0);
-    }
+    //.modal-dialog__red-shadow {
+    //  height: 50%;
+    //  width: 50%;
+    //  position: absolute;
+    //  bottom: 0;
+    //  left: 0;
+    //  background: radial-gradient(50% 50% at 0% 50%, #EB402F 0%, rgba(235, 64, 47, 0) 100%) left, radial-gradient(50% 50% at 0% 50%, #F2F2F2 0%, rgba(242, 242, 242, 0) 100%) right;
+    //  opacity: 0.4;
+    //}
+    //.modal-dialog__white-shadow {
+    //  height: 50%;
+    //  width: 50%;
+    //  position: absolute;
+    //  bottom: 0;
+    //  right: 0;
+    //  background:;
+    //  opacity: 0.2;
+    //  transform: matrix(-1, 0, 0, 1, 0, 0);
+    //}
 
     .modal-dialog__close {
       position: absolute;
@@ -759,7 +759,7 @@
       padding: 30px 65px 65px 65px;
       display: grid;
       grid-template-rows: 50px auto;
-
+      background: radial-gradient(50% 50% at 0% 50%, rgba(235, 64, 47, 0.4) 0%, rgba(235, 64, 47, 0) 100%) left, radial-gradient(50% 50% at 100% 50%, rgba(242, 242, 242, 0.2) 0%, rgba(242, 242, 242, 0) 100%) right;
       .modal-dialog__content-title {
         display: flex;
 
@@ -784,11 +784,10 @@
         box-sizing: border-box;
         border-radius: 15px;
         overflow: auto;
-
+        scrollbar-width: none;
         &::-webkit-scrollbar {
           width: 0;
         }
-
         .modal-dialog__content-objects-list {
           display: grid;
           grid-template-rows: repeat(auto-fill, minmax(80px, auto));
